Fix colour contrast on the timer and moves counter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ nav a {
 }
 
 .game-info {
-    color: white;
+    color: black;
     font-family: 'Hind', sans-serif;
     font-size: 2em;
 }
